# stablecoin-sentinel

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  TRACEABILITY.md  competition-requirements.md  our-direction.md  pyproject.toml  render.yaml  进度.txt
.claude/: settings.local.json
_extracted/: aml_guideline.txt  cap656.txt
backend/: config.py  main.py
backend/agent/: compliance_decider.py  manager.py  reporter.py  risk_assessor.py
backend/chain/: circle_wallets.py  executor.py  listener.py
backend/chain/abi/: MockUSDC.json
backend/cli/: m2_demo.py
backend/crosschain/: cctp_simulator.py
backend/data/: debank_client.py  sanctions.py  sanctions_mock.json
backend/rag/: ingest.py  retrieve.py
backend/store/: audit_log.py  models.py
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: MockUSDC.sol
contracts/test/: MockUSDC.t.sol
dashboard/: app.js  index.html  style.css
docs/: API.md  CODE_TOUR.md  CONTRACTS.md  ENV.md  PROMPTS.md  SUBMISSION.md  circle_product_feedback.md  demo_script.md  deploy.md  deployment.md
scripts/: register_entity_secret.py
